Fixed CSS overflow

--- a/src/pages/SelectedProduct.module.css
+++ b/src/pages/SelectedProduct.module.css
@@ -47,7 +47,7 @@
 
 .category {
   position: absolute;
-  left: 740px;
+  left: 630px;
   top: 13px;
   display: flex;
   align-items: center;
